# Fluidkit

./: .gitignore  README.md  pyproject.toml  test.py
dem/: fluidkit.config.json  package-lock.json  package.json  svelte.config.js
demo/: README.md  fluidkit.config.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
demo/src/: app.py
demo/src/lib/: demo.py  demo.remote.ts  test.py  test.remote.ts
demo/src/lib/fluidkit/: config.ts  registry.ts  schema.ts  types.ts
demo/src/routes/: +layout.svelte  +page.svelte
docs/: cli.md  command.md  config.md  cookbook.md  examples.md  form.md  hooks.md  prerender.md  query.md  quickstart.md  remote_functions.md
explorer/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
explorer/src/: App.svelte
explorer/src/lib/: state.svelte.ts  types.ts  utils.ts
explorer/src/lib/components/: DetailPane.svelte  Sidebar.svelte  TryItPanel.svelte
fluidkit/: __init__.py  context.py  decorators.py  exceptions.py  explorer.py  hmr.py  hooks.py  models.py  registry.py  types.py  utilities.py
fluidkit/cli/: __init__.py  config.py  main.py  patch.py  process.py  scaffold.py  utils.py
fluidkit/cli/commands/: __init__.py  create.py
fluidkit/codegen/: __init__.py  discovery.py  jsdoc.py  remote.py  ts.py
fluidkit/codegen/renderers/: __init__.py  interfaces.py
fluidkit/core/: config.py
fluidkit/generators/typescript/: imports.py  pipeline.py
fluidkit/runtime/: auth.ts  registry.ts  types.ts
fluidkit/runtime/templates/: +page.svelte  IntroComponent.svelte  app.py  demo.py  demo.remote.ts  schema.ts
fluidkit/tests/: test_codegen.py  test_context.py  test_decorators.py  test_exceptions.py  test_remote.py  test_type_validation.py
tests/: hmr_patching.py
