[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidkit"
version = "1.0.1"
description = "Python backend, SvelteKit frontend, zero boilerplate in between."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Aswanth Manoj", email = "aswanthmanoj51@gmail.com"},
]
keywords = ["fastapi", "typescript", "code-generation", "hmr", "hot module replacement", "full-stack", "type-safety", "sveltekit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi[all]>=0.128.8",
    "jurigged>=0.6.1",
    "nodejs-wheel>=24.13.1",
    "typer>=0.16.0",
]

[project.scripts]
fluidkit = "fluidkit.cli.main:app"

[project.optional-dependencies]
cli = ["typer"]

[project.urls]
Homepage = "https://github.com/AswanthManoj/Fluidkit"
Repository = "https://github.com/AswanthManoj/Fluidkit"
Issues = "https://github.com/AswanthManoj/Fluidkit/issues"
Documentation = "https://github.com/AswanthManoj/Fluidkit#readme"

[tool.setuptools.packages.find]
include = ["fluidkit*"]

[tool.setuptools.package-data]
fluidkit = ["runtime/*.ts", "runtime/*.svelte", "runtime/.gitignore.template", "runtime/templates/*", "icon.svg"]
